superbitty/tests/ui/BitFieldCompatible/uninhabited_enum.stderr
error: uninhabited enums (with no variants) cannot be `BitFieldCompatible`
 --> tests/ui/BitFieldCompatible/uninhabited_enum.rs:4:1
  |
4 | enum Uninhabited {}
  | ^^^^^^^^^^^^^^^^^^^
