superbitty/tests/ui/BitFieldCompatible/uninhabited_enum.rs
use superbitty::BitFieldCompatible;

#[derive(BitFieldCompatible)]
enum Uninhabited {}

fn main() {}
